<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_date"
            android:title="@string/matches"/>

    <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_team"
            android:title="@string/teams"/>

    <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites"/>

</menu>