<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <FrameLayout
            android:id="@+id/content_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0" />

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation_item" />

</LinearLayout>